# Olladoc

./: .gitignore  Olladoc.flatpakrepo  README.md  com.github.thorhent.Olladoc.json  io.github.thorhent.Olladoc.json  meson.build
data/: com.github.thorhent.Olladoc.desktop.in  com.github.thorhent.Olladoc.gschema.xml  com.github.thorhent.Olladoc.metainfo.xml.in  com.github.thorhent.Olladoc.service.in  io.github.thorhent.Olladoc.desktop.in  io.github.thorhent.Olladoc.gschema.xml  io.github.thorhent.Olladoc.metainfo.xml.in  io.github.thorhent.Olladoc.service.in  meson.build
data/fonts/: meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
repo/: summary  summary.idx
repo/refs/heads/appstream/: x86_64
repo/summaries/: 012b45fc521b72da99065bd18847453d20888303fd8d86b0167cdebfa2393a80-0fadcdfaa6550709add7517e7ad73c055021bf050aeb733a7ba006c838530f2b.delta  012b45fc521b72da99065bd18847453d20888303fd8d86b0167cdebfa2393a80-4204aebd2967cc4d2cf33a6b2b6e51463fe401c9af3850879cbcb5db8679dd9f.delta  012b45fc521b72da99065bd18847453d20888303fd8d86b0167cdebfa2393a80-b198ed3ccb85ada2611c9ff996c38f417838b8d10f3b547e621643e40a533a40.delta  012b45fc521b72da99065bd18847453d20888303fd8d86b0167cdebfa2393a80-b2f842a9353d331a83ec16b444993efb28feaf56a7e9699c194536a551f91dd8.delta  0984593b0034916ed8fc9780db58ed8c7a3870666c0e82054ee3e5ac447280f6-b2f842a9353d331a83ec16b444993efb28feaf56a7e9699c194536a551f91dd8.delta  (+69 more)
src/: consulta.py  estructurar.py  guardar.py  main.py  meson.build  olladoc.gresource.xml  olladoc.in  preferencias.py  window.py  window.ui
(+3 files in other folders)
