install_data(
  'DejaVuSans.ttf',
  'DejaVuSans-Bold.ttf',
  'AdwaitaMono-Regular.ttf',
  'AdwaitaMono-Bold.ttf',
  'LiberationSans-Regular.ttf',
  'LiberationSans-Bold.ttf',
  'NotoSans-Regular.ttf',
  'NotoSans-Bold.ttf',
  install_dir: join_paths(get_option('datadir'), meson.project_name(), 'fonts')
)